Bug 106011 - mac80211: Log spam "wlan0: Limiting TX power to" - MWG100250701
Summary: mac80211: Log spam "wlan0: Limiting TX power to" - MWG100250701
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: Intel Linux
: P1 low
Assignee: DO NOT USE - assign "network-wireless-intel" component instead
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-15 22:43 UTC by Andreas Kloeckner
Modified: 2015-11-24 07:53 UTC (History)
2 users (show)

See Also:
Kernel Version: 4.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
patch to limit the message (1.81 KB, patch)
2015-11-23 09:02 UTC, Johannes Berg
Details | Diff

Description Andreas Kloeckner 2015-10-15 22:43:10 UTC
I get this in my dmesg:

[52464.041250] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52464.707059] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52465.168531] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52465.203857] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52465.247743] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52465.257956] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52465.268810] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb
[52465.306069] wlan0: Limiting TX power to 23 (23 - 0) dBm as advertised by 00:0c:e6:9a:26:bb

As you can see, I get about 6 or 7 lines of this type every second. This somewhat limits the usefulness of "dmesg" as it now only reaches back a few minutes. In addition, while easily compressed, do fill up my disk (by way of syslog)
Comment 1 Johannes Berg 2015-11-23 09:02:56 UTC
Created attachment 195221 [details]
patch to limit the message

Please try this patch.

Note You need to log in before you can comment on or make changes to this bug.